<resources>
    <string name="app_name">MeetAndFix</string>
    <string name="underline_text"><u>Texto subrayado</u></string>
    <string name="introduzca_sus_datos_para_poder_ingresar">Introduce tus datos para poder ingresar</string>
    <string name="logo">LOGO</string>
    <string name="correo_electr_ncio">Correo electróncio</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="de_qu_forma_quieres_usar_meetfix">¿De qué forma quieres usar Meet&amp;Fix?</string>
    <string name="toolbartitle">Meet&amp;Fix</string>
    <string name="registro">Registrate</string>
    <string name="registrarme_como_cliente">Registrarme como cliente</string>
    <string name="registrarme_como_reparador">Registrarme como reparador</string>
    <string name="registrate_aqu">Registrate aquí</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="placeholder">Placeholder</string>
    <string name="llena_el_siguiente_fromulario_para_poder_registrarte_como_cliente">Llena el siguiente fromulario para poder registrarte como cliente</string>
    <string name="elegir_imagen_de_perfil">Elegir imagen de perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="apellidos">Apellidos:</string>
    <string name="introduce_tus_apellidos">Introduce tus apellidos</string>
    <string name="correo">Correo electrónico:</string>
    <string name="alguien_ejemplo_com">alguien@ejemplo.com</string>
    <string name="n_mero_de_tel_fono">Número de Teléfono:</string>
    <string name="_000000000">000000000</string>
    <string name="direcci_n_opcional">Dirección (opcional*):</string>
    <string name="calle_n_mero_de_casa">calle,número de casa...</string>
    <string name="contrase_a2">Contraseña:</string>
    <string name="dots">••••••••</string>
    <string name="enviar">Enviar</string>
    <string name="llena_el_siguiente_fromulario_para_poder_registrarte_como_reparador">Llena el siguiente fromulario para poder registrarte como reparador</string>
    <string name="nombre_del_negocio">Nombre del negocio:</string>
    <string name="tu_negocio">Tu negocio</string>
    <string name="direcci_n_de_sucursal">Dirección de Sucursal</string>
    <string name="direcci_n_completa">Dirección completa</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="calendario">Calendario</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="toolbar">ToolBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ltimas_notificaciones">Últimas Notificaciones</string>
    <string name="logotoolbar">LOGOToolbar</string>
    <string name="buscarhint">Buscar.....</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="nombre_de_usuario_profile">Nombre De usuario</string>
    <string name="nombre_de_la_notificaci_n">Nombre de la notificación</string>
    <string name="aztualizar">Aztualizar</string>
    <string name="actualizar">Actualizar</string>
    <string name="valores_default">Default</string>
    <string name="direcci_nn">Dirección</string>
    <string name="nombre_del_negocio_list">Nombre del negocio</string>
    <string name="direcci_n_del_negocio_list">Dirección del negocio</string>
    <string name="nombre_del_negocio_2">Nombre del negocio</string>
    <string name="imagen_de_negocio">imagen_de_negocio</string>
    <string name="direcci_nnn">Dirección</string>
    <string name="direcci_n_completa_m">Dirección completa</string>
    <string name="galer_a">Galería</string>
    <string name="ver_rese_as">Ver Reseñas</string>
    <string name="agendar_cita">Agendar cita</string>
    <string name="eventos_agendados">Eventos agendados</string>
    <string name="rese_as">Reseñas</string>
    <string name="rese_as_de_los_clientes">Reseñas de los clientes</string>
    <string name="nombre_del_cliente_n">Nombre del cliente</string>
    <string name="rese_a_completa">Reseña completa</string>
    <string name="fecha_de_publicaci_n">Fecha de publicación</string>
    <string name="escribir_rese_a">Escribir Reseña</string>
    <string name="escribir_rese_an">Escribir Reseña</string>
    <string name="escribe_un_rese_a_de_este_negoico">Escribe un reseña de este negoico</string>
    <string name="tu_calificaci_n">Tu calificación:</string>
    <string name="escribe_algo">Escribe algo....</string>
    <string name="publicar">Publicar</string>
    <string name="agendar_citan">Agendar cita</string>
    <string name="escoge_una_fecha_para_tu_cita">Escoge una fecha para tu cita</string>
    <string name="negocioss">Negocio</string>
    <string name="descripci_n_de_notificaci_nnm">Descripción de Notificación</string>
    <string name="editar_informaci_n">Editar información</string>
    <string name="edita_la_informaci_n_de_tu_negocio">Edita la información de tu negocio</string>
    <string name="nombre_del_establecimiento">Nombre del establecimiento:</string>
    <string name="direcci_n_completa_nn">Dirección completa:</string>
    <string name="imagenes">Imagenes</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="chat">Chat</string>
    <string name="nombre_del_emisor">Nombre del emisor</string>
    <string name="mensaje">Mensaje</string>
    <string name="fecha_de_envio">Fecha de envio</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="card_fecha">Fecha de la cita agendada</string>
    <string name="nombre_cita">Nombre Cliente/Reparador</string>
    <string-array name="filter_array">
        <item>Nombre</item>
        <item>Dirección</item>
    </string-array>
</resources>