<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0278C7">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/logo"
                android:src="@mipmap/full_logo_icon" />

            <TextView
                android:id="@+id/lblLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/introduzca_sus_datos_para_poder_ingresar"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/correo_electr_ncio"
                android:inputType="textPersonName"
                android:paddingLeft="12dp"
                android:textColor="#000000"
                android:textColorHint="#AAAAAA"
                android:textSize="24sp"
                android:autofillHints=""
                android:drawableStart="@drawable/custom_email_icon"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/custom_lock_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:textColor="#000000"
                android:textColorHint="#AAAAAA"
                android:textSize="24sp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_round_button"
                android:text="@string/ingresar"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lblRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/a_n_no_tienes_cuenta"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_round_button_border"
                android:text="@string/registrate_aqu"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>